assets/stylesheets/scss/_pages.erb.scss
/* ... */
.input-login {
 @include breakpoint(small down){
    display: block;
    float: right; 
    padding-top: 0.5rem;
    .input-login-field {
      margin-bottom: 0.1rem;
    }
  }
  @include breakpoint(medium){
    .input-login-field {
      display:inline-block;
      margin-right:0.4rem;
    }
  }
  @include breakpoint(large){
    margin-right:-0.75rem;
  }  
  .input-login-field{
    height: auto;
    font-size: $smallSize;
    width: 200px;
    padding: 0.4rem
  }
}

.dropdown.menu:not(.vertical) .is-dropdown-submenu.first-sub {
    top: 100%;
    left: auto;
    right: 0;
}


.rememberMe-ckb input{
  width:auto;
  margin-right:0;
  margin-top: 0.2rem;
}

.rememberMe-ckb{
  @include breakpoint(small down){
    float: right;
  }
}

.passwdRecovery{
  @include breakpoint(small down){
    display: block;
    margin-top: 0.2rem;
  }
}

.rememberMe-ckb {
  @include breakpoint(medium){
    width: 10rem;
    display: block;
    margin-left: 0.1rem;
  }
}

.passwdRecovery, .rememberMe-ckb label{
   font-size: $smallSize;
}

.passwdRecovery{
  @include breakpoint(medium){
    float: right;
    margin-top: -1.3rem;
    margin-right: 6.7rem;
  } 
}



/*-----------------------
Aside content LogIn page
-------------------------*/


.info{
  width: 100%;
  background: $content-background;
  @include border-radius($layout-border-radius);
}

.info p{
  font-size: $almostNormalSize;
  margin-bottom: 0;
}

.aside-container{
  width: $pard-aside-width;
  position:relative;
}

.grid-aside-content{
  padding: $inner-spacing;
}


/*------------------------------
grid-section content LogIn page
--------------------------------*/

.lateral-content-padding{
  padding: 0 $inner-spacing; 
}



.filter-select{
  display: inline-block;
  width:10.3rem;
  text-align: center;
  background-color: $content-background;
  margin-right:0.3rem;
}

.search-input{
  height: auto;
  font-size: $almostNormalSize;
  display: inline-block;
  width: 84%;
  margin:0;
}

.search-btn{
  display: inline;
  padding: 0.5rem;
  font-weight: 600;
  font-size: $almostNormalSize;
  @extend .pard-btn;
  margin:0;
  width:15%;

}

.ui-widget{
  display: inline-block;
  width: 14.5rem
}

.display-inline{
  display: inline-block; 
}

.search-engine-container{
  position: relative;
}

.search-tool-container{
  margin-top: 1rem;
}

// .box-content input{
//   @include horizontal-center;
//   position: relative;
//   max-width: 596px;
// }

.serachEngine-text-welcome-page{
  margin-top: 2.5rem;
  font-size: 1rem;
}

.search-results{
   @include breakpoint(small down){
    padding-left:1.5rem;
    padding-right:1.5rem;
  }
  @include breakpoint(medium){
    padding-left:2rem;
    padding-right:2rem;
  }
  margin-top: 2.5rem;
}



/*===============================================
USER PAGE
================================================*/

/*------------------
Header
-------------------*/

//GENERAL


.right-user-header-content{
  display: inline-block;
  position: absolute;
  @include breakpoint(large){
    margin-right: -1.5rem;
  }
  right:0;
}

.left-user-header-content{
  left:0;
  display: inline-block;
  position: absolute;
  @include breakpoint(large){
    margin-left:-0.5rem;
  }
}

.top-header-content{
  display: block;
  width: 100%;
  min-height: 3.5rem;
}

.settings-icon-dropdown-menu{
  color: black;
}

.settings-icon-dropdown-menu:hover{
  color: rgba(0,0,0,0.8);
}

/*-----------------------
Aside content User page
-------------------------*/



.create-profile-container {
  display: block;
  position: relative;
  width: 100%;
}

.create-profile-text, .myProfile-text{
  text-transform: uppercase;
  margin-top: 1.5rem;
  padding: 0 $inner-spacing;
  margin-bottom: 0.5rem;
}


.myprofile-card-position{
  margin-top: $pard-grid-spacing;
  background-color: $content-background;
}

/*------------
User Section
--------------*/

.user-section-content{
  padding: 1.5rem;
}


.grid-section-contentTitle{
  display: block;
  // width: 100%;
  // text-align: center;
  position: relative;
  margin-bottom:2rem; 
  // color: $title-color;
  // @include breakpoint(medium){
  // margin-top: 2rem;
  // margin-bottom: 3rem;}
  // @include breakpoint(small down){
  // margin-bottom: 5vw;}
} 


/*===============================================
PROFILE PAGE
================================================*/

/*--------
Aside
---------*/
.toUserPage-btn-container{
  margin-bottom:$pard-grid-spacing;
}

.profile-nav-container{
  @include border-radius($layout-border-radius);
  display: block;
  background: $content-background;
  margin-top: $pard-grid-spacing;
  padding: 0.2rem;
}


.name-column, .icon-column{
  display: inline-block;
  vertical-align: middle; 
}

.name-column{
  padding: 0rem 0.2rem 0rem 0.2rem;
  width: 8.2rem;
  // font-size: $smallSize;
}


// .name-column-production-nav{
//   vertical-align: 3px;
// }

.icon-column{
  padding: 0.4rem 0.2rem 0.4rem 0.2rem;
  width:2.7rem;
}

.other-profiles-nav-container{
  display: block;  
  margin-top: $pard-grid-spacing;
  background: $content-background;
  @include border-radius($layout-border-radius); 
  padding: 0.2rem;
}

.verticalAlign{
  @include vertical-align();
}

// .production-icon-container{
//   // height:2.2rem;
// }

.profile-selected-container{
  background: $grey-1;
  padding: 0.4rem 0.1rem;
  position: relative;
  width: 100%;
  cursor: pointer;
  min-height: 3.75rem;
  display: block;
}

.profile-nav-circle-selected{
  @include pardCircle(2.2rem);
  position:relative;
}

.profile-nav-circle{
  @include pardCircle(2.2rem);
  position:relative;
}


.profile-nav-element-icon{
  @include absolute-center;
  font-size: 1.7rem;
}

.profile-nav-name-selected, .profile-nav-name-element, .profile-nav-production-name{
  line-height: 1.3rem;
  font-size: $smallSize;
  margin-bottom: 0;
  cursor: pointer;
}

// .profile-nav-production-name


.nav-list-container{
  margin-top: 0.3rem;
  margin-bottom: 0.3rem;
}

.nav-icon-production-container{
  // height: 2.2rem;
  width: 2.2rem;
}
/* ... */

